--- a/Html-css-js/html day 1/index.html
+++ b/Html-css-js/html day 1/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Day 1 SWE 2024</title>
   <link rel="stylesheet" href="index.css">
-  <script src="index.js" defer></script>
+  
 </head>
 
 <body>
@@ -128,6 +128,8 @@
       </div>
     </div>
   </div>
+
+  <script src="./index.js" defer></script>
 
 </body>
 </html>
